log/build_2024-08-02_17-44-39/my_first_package/stderr.log
  File "/home/lsm/ros2_humble/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_subscriber.py", line 12
    			'/turtle1/pose'
    			^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

